--- a/book.toml
+++ b/book.toml
@@ -5,52 +5,28 @@ language = "en"
 src = "src"
 
 [build]
-# Adjust build-dir if you want GitHub Pages output in ../docs/
 build-dir = "book"
-
-# --- Plugins ---
-
-[preprocessor.linkcheck]
-command = "mdbook-linkcheck"
-
-[preprocessor.section-validator]
-command = "mdbook-section-validator"
-
-[preprocessor.check-missing-md]
-command = "mdbook-check-missing-md"
-
-[preprocessor.katex]
-command = "mdbook-katex"
-
-[preprocessor.mermaid]
-command = "mdbook-mermaid"
-
-[preprocessor.toc]
-command = "mdbook-toc"
-
-[preprocessor.admonish]
-command = "mdbook-admonish"
-
-[preprocessor.bib]
-command = "mdbook-bib"
-
-[preprocessor.quiz]
-command = "mdbook-quiz"
-
-[preprocessor.graphviz]
-command = "mdbook-graphviz"
-
-[preprocessor.plantuml]
-command = "mdbook-plantuml"
 
 [output.html]
 default-theme = "light"
 preferred-dark-theme = "coal"
-copy-fonts = true
+fold.enable = true
+git-repository-url = "https://github.com/kzorif/DSPy-Cookbook"
+edit-url-template = "https://github.com/kzorif/DSPy-Cookbook/edit/main/{path}"
 
-[output.html.search] # built-in search
-enable = true
+[output.html.playground]
+editable = true
 
-[output.html.open-on-gh]
-command = "mdbook-open-on-gh"
-repository-url = "https://github.com/firoz57/dspy-cookbook"
+[preprocessor.katex]
+[preprocessor.mermaid]
+[preprocessor.toc]
+[preprocessor.checklist]
+[preprocessor.multilang]
+[preprocessor.open-on-gh]
+[preprocessor.admonish]
+[preprocessor.graphviz]
+[preprocessor.svgbob]
+
+[output.linkcheck]
+[output.section-validator]
+[output.check-missing-md]
